/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.login;

import "doodle/design/login/login_struct.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.login";
option java_outer_classname = "LoginAccountProto";

message EmbeddedLoginAccountBindRequest {
  string account_id = 1;
}

message JgLoginAccountBindRequest {
  string sign_token = 1;
  string user_id = 2;
  string time = 3;
  string guid = 4;
  string cp_ext = 5;
}

message LoginAccountBindReply {
  oneof Result {
    LoginErrorCode error = 1;
    string payload = 2;
  }
}

message LoginAccountAuthRequest {
  string token = 1;
}

message LoginAccountAuthReply {
  oneof Result {
    LoginErrorCode error = 1;
    LoginAccountPayloadInfo payload = 2;
  }
}
