/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.login;

import "doodle/design/common/sdk.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.login";
option java_outer_classname = "LoginStructProto";

enum LoginErrorCode {
  FAILURE = 0;
  BAD_REQUEST = 1;
}

message LoginAccountInfo {
  string account_id = 1;
  doodle.design.common.SdkBundleInfo.SdkType sdk_type = 2;
}

message LoginRoleInfo {
  string account_id = 1;
  string role_id = 2;
  string role_name = 3;
  int32 role_level = 4;
  string server_id = 5;
  int64 timestamp = 6;
}

message LoginRoleInfoList {
  repeated LoginRoleInfo role_info = 1;
}

message LoginAccountAuthToken {
  string sign_token = 1;
  string account_id = 2;
  int64 timestamp = 3;
}
